--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,16 +5,30 @@
     <title>My Tweets</title>
 </head>
 <body>
-    <h1>My Tweets</h1>
-    <p>Here’s one of my favorite tweets:</p>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <h1>My Tweets</h1>
+            <p>Here’s one of my favorite tweets:</p>
 
-    <!-- Embedded tweet -->
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">Learning HTML is fun! 🚀</p>&mdash; OpenAI
-        (<a href="https://twitter.com/OpenAI/status/1612934783493664768">January 11, 2023</a>)
-    </blockquote> 
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-    <p><a href="index.html">Back to Homepage</a></p>
+            <!-- Embedded tweet -->
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Learning HTML is fun! 🚀</p>&mdash; OpenAI
+                (<a href="https://twitter.com/OpenAI/status/1612934783493664768">January 11, 2023</a>)
+            </blockquote> 
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+    <footer>
+        <p>Made by Ebenezer Adekanmi - <a href="https://github.com/ebenezeradekanmi" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
